# anime_library_scanner_plugin

./: .config_template  README.md  __init__.py  anime_library_scanner_plugin.py  anime_library_scanner_plugin_cli.py  init.yaml  models.py  pyproject.toml  refresh.py
playground/: README.md  demo.py
tests/: README.md
